vlib/v/checker/tests/match_missing.vv
match true {
}

match true {
	else {}
	else {}
}

match true {
	'foo' == 'bar' {}
}
